--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  rxdart: ^0.22.0
+  rxdart: ^0.21.0
   grpc: ^1.0.2
   protobuf: ^0.13.11
   graphql_flutter: ^1.0.0
+  shimmer: ^1.0.0
 
 dev_dependencies:
   flutter_test:
