--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.4.0",
     "apollo-server": "^2.5.0",
-    "graphql": "^14.3.0"
+    "graphql": "^14.3.0",
+    "graphql-tools": "^4.0.4"
   }
 }
