--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.0",
     "apollo-datasource-rest": "^0.4.0",
     "apollo-server": "^2.5.0",
     "apollo-server-cache-redis": "^0.4.0",
