--- a/graphql_server/package.json
+++ b/graphql_server/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.5.0",
     "apollo-server-cache-redis": "^0.4.0",
     "dataloader": "^1.4.0",
+    "faker": "^4.1.0",
     "graphql": "^14.3.0",
     "graphql-tools": "^4.0.4",
     "grpc": "^1.20.3"
